Refactor Category mapping logic to prevent circular references and improve hierarchy resolution; update response DTOs to use strings for created and modified dates